A3/Task2/parser.output
Grammar

    0 $accept: STATEMENTS $end

    1 STATEMENTS: STATEMENT STATEMENTS
    2           | STATEMENT

    3 STATEMENT: SELECT LT CONDITIONS GT OB NAME CB SEMI
    4          | PROJECT LT ATTR_LIST GT OB NAME CB SEMI
    5          | OB NAME CB CARTESIAN OB NAME CB SEMI
    6          | OB NAME CB EQUI LT EQUI_CONDITION GT OB NAME CB SEMI
    7          | error SEMI

    8 CONDITIONS: CONDITION AND CONDITIONS
    9           | CONDITION OR CONDITIONS
   10           | CONDITION

   11 CONDITION: NAME EQ STRING
   12          | NAME NEQ STRING
   13          | NAME EQ NAME
   14          | NAME NEQ NAME
   15          | NAME LT NAME
   16          | NAME GT NAME
   17          | NAME LE NAME
   18          | NAME GE NAME
   19          | NAME LT DIGIT
   20          | NAME GT DIGIT
   21          | NAME LE DIGIT
   22          | NAME GE DIGIT
   23          | NAME EQ DIGIT
   24          | NAME NEQ DIGIT

   25 ATTR_LIST: NAME COMMA ATTR_LIST
   26          | NAME

   27 EQUI_CONDITION: NAME DOT NAME EQ NAME DOT NAME
   28               | NAME DOT NAME NEQ NAME DOT NAME


Terminals, with rules where they appear

$end (0) 0
error (256) 7
SELECT (258) 3
LT (259) 3 4 6 15 19
GT (260) 3 4 6 16 20
LE (261) 17 21
GE (262) 18 22
EQ (263) 11 13 23 27
OB (264) 3 4 5 6
CB (265) 3 4 5 6
PROJECT (266) 4
CARTESIAN (267) 5
NAME (268) 3 4 5 6 11 12 13 14 15 16 17 18 19 20 21 22 23 24 25 26
    27 28
EQUI (269) 6
AND (270) 8
OR (271) 9
COMMA (272) 25
DOT (273) 27 28
SEMI (274) 3 4 5 6 7
NEQ (275) 12 14 24 28
STRING (276) 11 12
DIGIT (277) 19 20 21 22 23 24


Nonterminals, with rules where they appear

$accept (23)
    on left: 0
STATEMENTS (24)
    on left: 1 2, on right: 0 1
STATEMENT (25)
    on left: 3 4 5 6 7, on right: 1 2
CONDITIONS (26)
    on left: 8 9 10, on right: 3 8 9
CONDITION (27)
    on left: 11 12 13 14 15 16 17 18 19 20 21 22 23 24, on right: 8
    9 10
ATTR_LIST (28)
    on left: 25 26, on right: 4 25
EQUI_CONDITION (29)
    on left: 27 28, on right: 6


State 0

    0 $accept: . STATEMENTS $end

    error    shift, and go to state 1
    SELECT   shift, and go to state 2
    OB       shift, and go to state 3
    PROJECT  shift, and go to state 4

    STATEMENTS  go to state 5
    STATEMENT   go to state 6


State 1

    7 STATEMENT: error . SEMI

    SEMI  shift, and go to state 7


State 2

    3 STATEMENT: SELECT . LT CONDITIONS GT OB NAME CB SEMI

    LT  shift, and go to state 8


State 3

    5 STATEMENT: OB . NAME CB CARTESIAN OB NAME CB SEMI
    6          | OB . NAME CB EQUI LT EQUI_CONDITION GT OB NAME CB SEMI

    NAME  shift, and go to state 9


State 4

    4 STATEMENT: PROJECT . LT ATTR_LIST GT OB NAME CB SEMI

    LT  shift, and go to state 10


State 5

    0 $accept: STATEMENTS . $end

    $end  shift, and go to state 11


State 6

    1 STATEMENTS: STATEMENT . STATEMENTS
    2           | STATEMENT .

    error    shift, and go to state 1
    SELECT   shift, and go to state 2
    OB       shift, and go to state 3
    PROJECT  shift, and go to state 4

    $end  reduce using rule 2 (STATEMENTS)

    STATEMENTS  go to state 12
    STATEMENT   go to state 6


State 7

    7 STATEMENT: error SEMI .

    $default  reduce using rule 7 (STATEMENT)


State 8

    3 STATEMENT: SELECT LT . CONDITIONS GT OB NAME CB SEMI

    NAME  shift, and go to state 13

    CONDITIONS  go to state 14
    CONDITION   go to state 15


State 9

    5 STATEMENT: OB NAME . CB CARTESIAN OB NAME CB SEMI
    6          | OB NAME . CB EQUI LT EQUI_CONDITION GT OB NAME CB SEMI

    CB  shift, and go to state 16


State 10

    4 STATEMENT: PROJECT LT . ATTR_LIST GT OB NAME CB SEMI

    NAME  shift, and go to state 17

    ATTR_LIST  go to state 18


State 11

    0 $accept: STATEMENTS $end .

    $default  accept


State 12

    1 STATEMENTS: STATEMENT STATEMENTS .

    $default  reduce using rule 1 (STATEMENTS)


State 13

   11 CONDITION: NAME . EQ STRING
   12          | NAME . NEQ STRING
   13          | NAME . EQ NAME
   14          | NAME . NEQ NAME
   15          | NAME . LT NAME
   16          | NAME . GT NAME
   17          | NAME . LE NAME
   18          | NAME . GE NAME
   19          | NAME . LT DIGIT
   20          | NAME . GT DIGIT
   21          | NAME . LE DIGIT
   22          | NAME . GE DIGIT
   23          | NAME . EQ DIGIT
   24          | NAME . NEQ DIGIT

    LT   shift, and go to state 19
    GT   shift, and go to state 20
    LE   shift, and go to state 21
    GE   shift, and go to state 22
    EQ   shift, and go to state 23
    NEQ  shift, and go to state 24


State 14

    3 STATEMENT: SELECT LT CONDITIONS . GT OB NAME CB SEMI

    GT  shift, and go to state 25


State 15

    8 CONDITIONS: CONDITION . AND CONDITIONS
    9           | CONDITION . OR CONDITIONS
   10           | CONDITION .

    AND  shift, and go to state 26
    OR   shift, and go to state 27

    $default  reduce using rule 10 (CONDITIONS)


State 16

    5 STATEMENT: OB NAME CB . CARTESIAN OB NAME CB SEMI
    6          | OB NAME CB . EQUI LT EQUI_CONDITION GT OB NAME CB SEMI

    CARTESIAN  shift, and go to state 28
    EQUI       shift, and go to state 29


State 17

   25 ATTR_LIST: NAME . COMMA ATTR_LIST
   26          | NAME .

    COMMA  shift, and go to state 30

    $default  reduce using rule 26 (ATTR_LIST)


State 18

    4 STATEMENT: PROJECT LT ATTR_LIST . GT OB NAME CB SEMI

    GT  shift, and go to state 31


State 19

   15 CONDITION: NAME LT . NAME
   19          | NAME LT . DIGIT

    NAME   shift, and go to state 32
    DIGIT  shift, and go to state 33


State 20

   16 CONDITION: NAME GT . NAME
   20          | NAME GT . DIGIT

    NAME   shift, and go to state 34
    DIGIT  shift, and go to state 35


State 21

   17 CONDITION: NAME LE . NAME
   21          | NAME LE . DIGIT

    NAME   shift, and go to state 36
    DIGIT  shift, and go to state 37


State 22

   18 CONDITION: NAME GE . NAME
   22          | NAME GE . DIGIT

    NAME   shift, and go to state 38
    DIGIT  shift, and go to state 39


State 23

   11 CONDITION: NAME EQ . STRING
   13          | NAME EQ . NAME
   23          | NAME EQ . DIGIT

    NAME    shift, and go to state 40
    STRING  shift, and go to state 41
    DIGIT   shift, and go to state 42


State 24

   12 CONDITION: NAME NEQ . STRING
   14          | NAME NEQ . NAME
   24          | NAME NEQ . DIGIT

    NAME    shift, and go to state 43
    STRING  shift, and go to state 44
    DIGIT   shift, and go to state 45


State 25

    3 STATEMENT: SELECT LT CONDITIONS GT . OB NAME CB SEMI

    OB  shift, and go to state 46


State 26

    8 CONDITIONS: CONDITION AND . CONDITIONS

    NAME  shift, and go to state 13

    CONDITIONS  go to state 47
    CONDITION   go to state 15


State 27

    9 CONDITIONS: CONDITION OR . CONDITIONS

    NAME  shift, and go to state 13

    CONDITIONS  go to state 48
    CONDITION   go to state 15


State 28

    5 STATEMENT: OB NAME CB CARTESIAN . OB NAME CB SEMI

    OB  shift, and go to state 49


State 29

    6 STATEMENT: OB NAME CB EQUI . LT EQUI_CONDITION GT OB NAME CB SEMI

    LT  shift, and go to state 50


State 30

   25 ATTR_LIST: NAME COMMA . ATTR_LIST

    NAME  shift, and go to state 17

    ATTR_LIST  go to state 51


State 31

    4 STATEMENT: PROJECT LT ATTR_LIST GT . OB NAME CB SEMI

    OB  shift, and go to state 52


State 32

   15 CONDITION: NAME LT NAME .

    $default  reduce using rule 15 (CONDITION)


State 33

   19 CONDITION: NAME LT DIGIT .

    $default  reduce using rule 19 (CONDITION)


State 34

   16 CONDITION: NAME GT NAME .

    $default  reduce using rule 16 (CONDITION)


State 35

   20 CONDITION: NAME GT DIGIT .

    $default  reduce using rule 20 (CONDITION)


State 36

   17 CONDITION: NAME LE NAME .

    $default  reduce using rule 17 (CONDITION)


State 37

   21 CONDITION: NAME LE DIGIT .

    $default  reduce using rule 21 (CONDITION)


State 38

   18 CONDITION: NAME GE NAME .

    $default  reduce using rule 18 (CONDITION)


State 39

   22 CONDITION: NAME GE DIGIT .

    $default  reduce using rule 22 (CONDITION)


State 40

   13 CONDITION: NAME EQ NAME .

    $default  reduce using rule 13 (CONDITION)


State 41

   11 CONDITION: NAME EQ STRING .

    $default  reduce using rule 11 (CONDITION)


State 42

   23 CONDITION: NAME EQ DIGIT .

    $default  reduce using rule 23 (CONDITION)


State 43

   14 CONDITION: NAME NEQ NAME .

    $default  reduce using rule 14 (CONDITION)


State 44

   12 CONDITION: NAME NEQ STRING .

    $default  reduce using rule 12 (CONDITION)


State 45

   24 CONDITION: NAME NEQ DIGIT .

    $default  reduce using rule 24 (CONDITION)


State 46

    3 STATEMENT: SELECT LT CONDITIONS GT OB . NAME CB SEMI

    NAME  shift, and go to state 53


State 47

    8 CONDITIONS: CONDITION AND CONDITIONS .

    $default  reduce using rule 8 (CONDITIONS)


State 48

    9 CONDITIONS: CONDITION OR CONDITIONS .

    $default  reduce using rule 9 (CONDITIONS)


State 49

    5 STATEMENT: OB NAME CB CARTESIAN OB . NAME CB SEMI

    NAME  shift, and go to state 54


State 50

    6 STATEMENT: OB NAME CB EQUI LT . EQUI_CONDITION GT OB NAME CB SEMI

    NAME  shift, and go to state 55

    EQUI_CONDITION  go to state 56


State 51

   25 ATTR_LIST: NAME COMMA ATTR_LIST .

    $default  reduce using rule 25 (ATTR_LIST)


State 52

    4 STATEMENT: PROJECT LT ATTR_LIST GT OB . NAME CB SEMI

    NAME  shift, and go to state 57


State 53

    3 STATEMENT: SELECT LT CONDITIONS GT OB NAME . CB SEMI

    CB  shift, and go to state 58


State 54

    5 STATEMENT: OB NAME CB CARTESIAN OB NAME . CB SEMI

    CB  shift, and go to state 59


State 55

   27 EQUI_CONDITION: NAME . DOT NAME EQ NAME DOT NAME
   28               | NAME . DOT NAME NEQ NAME DOT NAME

    DOT  shift, and go to state 60


State 56

    6 STATEMENT: OB NAME CB EQUI LT EQUI_CONDITION . GT OB NAME CB SEMI

    GT  shift, and go to state 61


State 57

    4 STATEMENT: PROJECT LT ATTR_LIST GT OB NAME . CB SEMI

    CB  shift, and go to state 62


State 58

    3 STATEMENT: SELECT LT CONDITIONS GT OB NAME CB . SEMI

    SEMI  shift, and go to state 63


State 59

    5 STATEMENT: OB NAME CB CARTESIAN OB NAME CB . SEMI

    SEMI  shift, and go to state 64


State 60

   27 EQUI_CONDITION: NAME DOT . NAME EQ NAME DOT NAME
   28               | NAME DOT . NAME NEQ NAME DOT NAME

    NAME  shift, and go to state 65


State 61

    6 STATEMENT: OB NAME CB EQUI LT EQUI_CONDITION GT . OB NAME CB SEMI

    OB  shift, and go to state 66


State 62

    4 STATEMENT: PROJECT LT ATTR_LIST GT OB NAME CB . SEMI

    SEMI  shift, and go to state 67


State 63

    3 STATEMENT: SELECT LT CONDITIONS GT OB NAME CB SEMI .

    $default  reduce using rule 3 (STATEMENT)


State 64

    5 STATEMENT: OB NAME CB CARTESIAN OB NAME CB SEMI .

    $default  reduce using rule 5 (STATEMENT)


State 65

   27 EQUI_CONDITION: NAME DOT NAME . EQ NAME DOT NAME
   28               | NAME DOT NAME . NEQ NAME DOT NAME

    EQ   shift, and go to state 68
    NEQ  shift, and go to state 69


State 66

    6 STATEMENT: OB NAME CB EQUI LT EQUI_CONDITION GT OB . NAME CB SEMI

    NAME  shift, and go to state 70


State 67

    4 STATEMENT: PROJECT LT ATTR_LIST GT OB NAME CB SEMI .

    $default  reduce using rule 4 (STATEMENT)


State 68

   27 EQUI_CONDITION: NAME DOT NAME EQ . NAME DOT NAME

    NAME  shift, and go to state 71


State 69

   28 EQUI_CONDITION: NAME DOT NAME NEQ . NAME DOT NAME

    NAME  shift, and go to state 72


State 70

    6 STATEMENT: OB NAME CB EQUI LT EQUI_CONDITION GT OB NAME . CB SEMI

    CB  shift, and go to state 73


State 71

   27 EQUI_CONDITION: NAME DOT NAME EQ NAME . DOT NAME

    DOT  shift, and go to state 74


State 72

   28 EQUI_CONDITION: NAME DOT NAME NEQ NAME . DOT NAME

    DOT  shift, and go to state 75


State 73

    6 STATEMENT: OB NAME CB EQUI LT EQUI_CONDITION GT OB NAME CB . SEMI

    SEMI  shift, and go to state 76


State 74

   27 EQUI_CONDITION: NAME DOT NAME EQ NAME DOT . NAME

    NAME  shift, and go to state 77


State 75

   28 EQUI_CONDITION: NAME DOT NAME NEQ NAME DOT . NAME

    NAME  shift, and go to state 78


State 76

    6 STATEMENT: OB NAME CB EQUI LT EQUI_CONDITION GT OB NAME CB SEMI .

    $default  reduce using rule 6 (STATEMENT)


State 77

   27 EQUI_CONDITION: NAME DOT NAME EQ NAME DOT NAME .

    $default  reduce using rule 27 (EQUI_CONDITION)


State 78

   28 EQUI_CONDITION: NAME DOT NAME NEQ NAME DOT NAME .

    $default  reduce using rule 28 (EQUI_CONDITION)
